syntax = "proto3";

package user;

service UserService {
  rpc FindName (UserByFullName) returns (UserFullName) {}
}

message UserByFullName {
  string userId = 1;
}

message UserFullName {
  string fullName = 1;
}